--- a/index.html
+++ b/index.html
@@ -5,29 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet 1 - Base de Données Avancées</title>
     <style>
-        body {
+       body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 50px;
-            background-color: #f0f0f0;
+            margin: 0;
+            min-height: 100vh;
+
+            /* 🌄 Fond image */
+            background-image: url("images/background.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
+
+        /* 🌙 Filtre sombre pour la lisibilité */
+        body::before {
+            content: "";
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.4);
+            z-index: -1;
+        }
+
+        /* 📝 Titres et textes */
         h1 {
-            color: #333;
-        }
-        p {
-            color: #555;
-        }
+             color: #fff200; /* jaune vif */
+             margin-bottom: 15px;
+             text-shadow: 1px 1px 3px rgba(0,0,0,0.7); /* léger contour sombre pour lisibilité */
+           }
+
+         p {
+             color: #ffffff; /* blanc pur */
+             text-shadow: 1px 1px 2px rgba(0,0,0,0.7); /* contour sombre */
+             max-width: 600px;
+             margin-bottom: 25px;
+           }
+        /* 🔗 Bouton */
         a {
             display: inline-block;
-            margin: 10px;
-            padding: 10px 20px;
+            padding: 12px 28px;
             text-decoration: none;
-            background-color: #007bff;
-            color: white;
-            border-radius: 5px;
+            background-color: #ffffff;
+            color: #5a4fcf;
+            font-weight: bold;
+            border-radius: 30px;
+            transition: all 0.3s ease;
         }
+
         a:hover {
-            background-color: #0056b3;
+            background-color: #f1f1f1;
+            transform: scale(1.05);
         }
     </style>
 </head>
