Update project title and GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             margin: 0;
             min-height: 100vh;
 
-            /* 🌄 Fond image */
             background-image: url("images/background.jpg");
             background-size: cover;
             background-position: center;
@@ -23,7 +22,7 @@
             align-items: center;
         }
 
-        /* 🌙 Filtre sombre pour la lisibilité */
+    
         body::before {
             content: "";
             position: fixed;
@@ -32,7 +31,6 @@
             z-index: -1;
         }
 
-        /* 📝 Titres et textes */
         h1 {
              color: #fff200; /* jaune vif */
              margin-bottom: 15px;
@@ -64,8 +62,8 @@
     </style>
 </head>
 <body>
-    <h1>Base de Données Avancées</h1>
+    <h1>Deployementdapplication</h1>
     <p>Bienvenue sur la page de ce projet. Vous pouvez consulter les informations ici :</p>
-    <a href="https://github.com/Mamadousanoussybah/informatiqueMobil" target="_blank">Voir le code sur GitHub</a>
+    <a href="https://github.com/Mamadousanoussybah/Deployementdapplication" target="_blank">Voir le code sur GitHub</a>
 </body>
 </html>
